--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --open",
-    "watch": "webpack --watch"
+    "dev-client": "webpack-dev-server --open && ",
+    "dev-server": "nodemon ./server/server.js",
+    "start": "webpack && node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,10 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "pg": "^7.17.1"
   }
 }
