created /login route handler

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^7.17.1"
   }
 }
