--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@types/jest": "^24.9.0",
+    "@types/supertest": "^2.0.8",
     "express": "^4.17.1",
-    "pg": "^7.17.1"
+    "jest": "^24.9.0",
+    "pg": "^7.17.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.3.0"
   }
 }
