--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "dev-client": "webpack-dev-server --open && ",
+    "dev-client": "webpack-dev-server --open",
     "dev-server": "nodemon ./server/server.js",
+    "dev": "webpack-dev-server --open && nodemon ./server/server.js",
     "start": "webpack && node ./server/server.js"
   },
   "repository": {
@@ -23,7 +24,10 @@
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "nodemon": "^2.0.2",
+    "react": "^16.12.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
