--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "@types/jest": "^24.9.0",
-    "@types/supertest": "^2.0.8",
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^24.9.0",
     "pg": "^7.17.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.3.0"
+    "supertest": "^4.0.2"
   }
 }
