--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --open & nodemon server/server.js",
+    "start": "nodemon server/server.js",
     "watch": "webpack --watch"
   },
   "repository": {
@@ -26,5 +27,11 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "@babel/preset-react": "^7.8.3",
+    "nodemon": "^2.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
