--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
     "react-dom": "^16.12.0",
     "express": "^4.17.1",
     "pg": "^7.17.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
