added test script to package json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev-client": "webpack-dev-server --open",
     "dev-server": "nodemon ./server/server.js",
     "dev": "webpack-dev-server --open & nodemon ./server/server.js",
-    "start": "webpack && node ./server/server.js"
+    "start": "webpack && node ./server/server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
