--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "sass-loader": "^8.0.2",
@@ -36,8 +37,6 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.8.3",
-    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "express": "^4.17.1",
