--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "dev-client": "webpack-dev-server --open",
     "dev-server": "nodemon ./server/server.js",
-    "dev": "webpack-dev-server --open --hot & nodemon ./server/server.js",
+    "dev": "webpack-dev-server --open & nodemon ./server/server.js",
     "start": "webpack && node ./server/server.js"
   },
   "repository": {
@@ -32,6 +32,7 @@
     "react": "^16.12.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
