--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "webpack",
     "dev-client": "webpack-dev-server --open",
     "dev-server": "nodemon ./server/server.js",
-    "dev": "webpack-dev-server --open & nodemon ./server/server.js",
-    "start": "webpack && node ./server/server.js"
+    "dev": "NODE_ENV=development webpack-dev-server --open & nodemon ./server/server.js",
+    "start": "NODE_ENV=production webpack && node ./server/server.js"
   },
   "repository": {
     "type": "git",
