--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-<<<<<<< HEAD
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cross-env": "^6.0.3",
@@ -45,23 +44,15 @@
     "jest": "^24.9.0",
     "pg": "^7.17.1",
     "react-dom": "^16.12.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "@babel/preset-react": "^7.8.3",
+    "node-sass": "^4.13.1",
+    "path": "^0.12.7"
   },
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
-=======
-    "@babel/preset-react": "^7.8.3",
-    "express": "^4.17.1",
-    "node-sass": "^4.13.1",
-    "nodemon": "^2.0.2",
-    "path": "^0.12.7",
-    "pg": "^7.17.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "save": "^2.4.0"
->>>>>>> dev
   }
 }
